# Nordic-54L15-DK

./: CMakeLists.txt  prj.conf
app_components/audio_i2s_app/: CMakeLists.txt  i2s_config.c  i2s_config.h
app_components/i2c_app/: CMakeLists.txt  i2c_app.c  i2c_app.h  tlv-config-rough.txt
boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
src/: main.c
